src/objects/G2OPlanning_WorkItem__c.object
<CustomObject>
    <description>Log solution tasks, link up to tests, documentation and track issues. Use chatter to discuss the status of each.</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Config</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Web Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Service Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button / VF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mashup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refactoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Documentation_Link__c</fullName>
        <description>The main documentation link</description>
        <label>Documentation (Link)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Documentation_Title__c</fullName>
        <label>Documentation (Title)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ending Sprint</label>
        <referenceTo>G2OPlanning_Sprint__c</referenceTo>
        <relationshipLabel>Work items (Ending this Sprint)</relationshipLabel>
        <relationshipName>Work_items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort_Days__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Estimated Effort (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Defect_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Defect ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Functional_Spec_Link__c</fullName>
        <label>Functional Spec (Link)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Integration_Tests__c</fullName>
        <label>Integration Test(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Misc_Notes__c</fullName>
        <label>Misc Notes</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Work_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work Item a defect is related to</inlineHelpText>
        <label>Related Work item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Work item</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>G2OPlanning_WorkItem__c</referenceTo>
        <relationshipLabel>Defects/ Change Requests</relationshipLabel>
        <relationshipName>Work_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Deadline__c</fullName>
        <description>To be completed and tested by this date. This may not necessarily match the planned sprint.</description>
        <label>Release Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Sprint__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Start Sprint</label>
        <referenceTo>G2OPlanning_Sprint__c</referenceTo>
        <relationshipLabel>Work items (Starting this Sprint)</relationshipLabel>
        <relationshipName>Work_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Someone Else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted by BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Tested - Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Tested - Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Tested - Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Tested - Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outscoped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Spec_Reference__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Technical Spec Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Stream__c</fullName>
        <description>Which work stream the item is for. Application Maintenance, Project, or Major Release</description>
        <label>Work Stream</label>
        <picklist>
            <picklistValues>
                <fullName>Application Maintainance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Release (Please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old: Release 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old: Release 1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old: Release 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old: Release 3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old: Hypercare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Work item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Area__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Deadline__c</columns>
        <columns>Work_Stream__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ankit</fullName>
        <columns>NAME</columns>
        <columns>Developer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Task__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Deadline__c</columns>
        <columns>Start_Sprint__c</columns>
        <columns>Documentation_Link__c</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>contains</operation>
            <value>Ankit Bhatnagar</value>
        </filters>
        <label>Ankit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bhargavi</fullName>
        <columns>NAME</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Area__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Sprint__c</columns>
        <columns>Documentation_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>contains</operation>
            <value>Bhargavi</value>
        </filters>
        <label>Bhargavi</label>
    </listViews>
    <listViews>
        <fullName>CR_in_Name_or_Type</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Task__c</columns>
        <columns>Area__c</columns>
        <columns>Developer__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Task__c</field>
            <operation>contains</operation>
            <value>CR</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>G2OPlanning_WorkItem__c.Change_Request</value>
        </filters>
        <label>CR in Name or Type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Carl</fullName>
        <columns>NAME</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Area__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Sprint__c</columns>
        <columns>Documentation_Link__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>contains</operation>
            <value>Carl</value>
        </filters>
        <label>Carl</label>
    </listViews>
    <listViews>
        <fullName>Incidents</fullName>
        <columns>NAME</columns>
        <columns>Task__c</columns>
        <columns>Developer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Task__c</field>
            <operation>startsWith</operation>
            <value>IM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/20/2014 12:00 AM</value>
        </filters>
        <label>Incidents</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JohanAll</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Area__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Deadline__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>contains</operation>
            <value>Johan</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Johan - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kenneth</fullName>
        <columns>NAME</columns>
        <columns>Task__c</columns>
        <columns>Priority__c</columns>
        <columns>Related_Work_item__c</columns>
        <columns>Release_Deadline__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>equals</operation>
            <value>Kenneth Jensen</value>
        </filters>
        <label>Kenneth</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Matthew</fullName>
        <columns>NAME</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Area__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Sprint__c</columns>
        <columns>Documentation_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>contains</operation>
            <value>Matthew</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>G2OPlanning_WorkItem__c.Work_item</value>
        </filters>
        <label>Matt - Work Items (Editable)</label>
    </listViews>
    <listViews>
        <fullName>MatthewAll</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Area__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Deadline__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>contains</operation>
            <value>Matthew</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Matt - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Missing_Documentation</fullName>
        <columns>NAME</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Status__c</columns>
        <columns>Ending_Sprint__c</columns>
        <columns>Documentation_Title__c</columns>
        <columns>Documentation_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Dev Complete,Accepted by BA,Rejected by BA,QA Tested - Pass,QA Tested - Fail</value>
        </filters>
        <filters>
            <field>Documentation_Title__c</field>
            <operation>equals</operation>
        </filters>
        <label>Missing Documentation</label>
    </listViews>
    <listViews>
        <fullName>Not_started</fullName>
        <columns>NAME</columns>
        <columns>Task__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Developer__c</columns>
        <columns>Release_Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,Delayed Start</value>
        </filters>
        <label>Not started</label>
    </listViews>
    <listViews>
        <fullName>Open_Defects</fullName>
        <columns>NAME</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Estimated_Effort_Days__c</columns>
        <columns>Related_Work_item__c</columns>
        <columns>External_Defect_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Dev Complete,Complete</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Accepted by BA,QA Tested - Pass,UAT Tested - Pass,Outscoped</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>G2OPlanning_WorkItem__c.Defect</value>
        </filters>
        <label>All Open Defects (Editable)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Items</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Developer__c</columns>
        <columns>Task__c</columns>
        <columns>Area__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Stream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Dev Complete,Accepted by BA,QA Tested - Pass,UAT Tested - Pass,Outscoped</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>G2OPlanning_WorkItem__c.Change_Request</value>
        </filters>
        <label>All Open Items and Defects (noneditable)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Items_Carl</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Task__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Dev Complete,Accepted by BA,QA Tested - Pass,UAT Tested - Pass,Complete</value>
        </filters>
        <filters>
            <field>Developer__c</field>
            <operation>contains</operation>
            <value>Carl</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Outscoped</value>
        </filters>
        <label>Open Items - Carl</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Work Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work items</pluralLabel>
    <recordTypes>
        <fullName>Change_Request</fullName>
        <active>true</active>
        <description>An item of work that needs to be run through a change request process. Requires an estimate to be able to convert to a work item.</description>
        <label>Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Defect</fullName>
        <active>true</active>
        <description>An issue in a delivered solution. Usually related to an existing work item.</description>
        <label>Defect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_item</fullName>
        <active>true</active>
        <description>A task or item of work to be completed as part of a PUC</description>
        <label>Work item</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>G2OPlanning_Work_Items_Converting_RT</fullName>
        <active>true</active>
        <description>Converting a record type requires an estimate to be provided,,,</description>
        <errorConditionFormula>ISCHANGED( RecordTypeId ) &amp;&amp; (Estimated_Effort_Days__c == NULL || Estimated_Effort_Days__c == 0)</errorConditionFormula>
        <errorMessage>You must provied an estimate to change a record type. If you are changing from Workitem to defect or change request, provide a value and remove it after saving the record.</errorMessage>
    </validationRules>
</CustomObject>